config/k8s/end-to-end.yaml
# Deployment of a demo-app using our custom resources
apiVersion: apps/v1
kind: Deployment
metadata:
  name: open-feature-demo-deployment
  labels:
    app: open-feature-demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: open-feature-demo
  template:
    metadata:
      labels:
        app: open-feature-demo
      annotations:
        openfeature.dev/enabled: "true"
        openfeature.dev/featureflagsource: "flag-sources"
    spec:
      containers:
        - name: open-feature-demo
          image: ghcr.io/open-feature/playground-app:v0.14.1 # x-release-please-version
          args:
            - flagd
          ports:
            - containerPort: 30000
---
# Service to expose our application
apiVersion: v1
kind: Service
metadata:
  name: open-feature-demo-app-service
  labels:
    app: open-feature-demo
spec:
  type: NodePort
  selector:
    app: open-feature-demo
  ports:
    - port: 30000
      targetPort: 30000
      nodePort: 30000
---
# Service to expose flagd for client-side evaluations
# Note that in production, it's recommended to run a dedicated flagd deployment to serve client-side evaluations.
apiVersion: v1
kind: Service
metadata:
  name: open-feature-demo-ui-service
  labels:
    app: open-feature-demo
spec:
  type: NodePort
  selector:
    app: open-feature-demo
  ports:
    - port: 30002
      targetPort: 8013
      nodePort: 30002
