config/k8s/in-process-evaluation.yaml
# Deployment of a demo-app using our custom resources
apiVersion: apps/v1
kind: Deployment
metadata:
  name: open-feature-demo-deployment
  labels:
    app: open-feature-demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: open-feature-demo
  template:
    metadata:
      labels:
        app: open-feature-demo
      annotations:
        openfeature.dev/enabled: 'true'
        openfeature.dev/inprocessconfiguration: 'in-process-config'
    spec:
      containers:
        - name: open-feature-demo
          image: ghcr.io/open-feature/playground-app:v0.16.0 # x-release-please-version
          ports:
            - containerPort: 30000
          args:
            - flagd
---
# Service to expose our application
apiVersion: v1
kind: Service
metadata:
  name: open-feature-demo-app-service
  labels:
    app: open-feature-demo
spec:
  type: NodePort
  selector:
    app: open-feature-demo
  ports:
    - port: 30000
      targetPort: 30000
      nodePort: 30000
---
# Ingress for our application
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: localhost
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: open-feature-demo-app-service
                port:
                  number: 30000
